[gd_scene load_steps=12 format=3 uid="uid://6odsri1xhnxe"]

[ext_resource type="Texture2D" uid="uid://df8rhqkgl70ms" path="res://Assets/Textures/UI/HUD/Skills/empty_skill_slot_outline.png" id="2_hltg7"]
[ext_resource type="Texture2D" uid="uid://dbrfoht8b7i40" path="res://Assets/Textures/UI/HUD/Skills/empty_skill_slot.png" id="2_s64fj"]
[ext_resource type="Script" path="res://Scripts/UI/SkillTree/skill_button.gd" id="2_svy3l"]
[ext_resource type="Texture2D" uid="uid://dwmqhlswdh4cb" path="res://Assets/Textures/UI/HUD/Interaction/circular_progress.png" id="4_xiwpi"]

[sub_resource type="Gradient" id="Gradient_fbh1k"]
resource_local_to_scene = true
interpolation_mode = 2
colors = PackedColorArray(0.239216, 0.239216, 0.478431, 1, 0.239216, 0.239216, 0.478431, 1)

[sub_resource type="Animation" id="Animation_3ua6q"]
resource_name = "hovering"
length = 0.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Background:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, -2.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lock:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2.5, -2.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Outline:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(-2.5, -2.5),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.1, 1.1)]
}

[sub_resource type="Animation" id="Animation_lp4xp"]
resource_name = "locked"
length = 0.8
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lock:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(-2.5, -2.5, -2.5, -2.5, -2.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lock:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(-2.5, -2.5, -2.5, -2.5, -2.5, -2.5, -2.5, -2.5, -2.5),
"update": 0,
"values": [0.0, 0.0872665, 0.0, -0.0872665, 0.0, 0.0872665, 0.0, -0.0872665, 0.0]
}

[sub_resource type="Animation" id="Animation_q1y2i"]
resource_name = "unlocking"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Lock:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2.5, -2.5),
"update": 0,
"values": [Vector2(1.1, 1.1), Vector2(1.5, 1.5)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Lock:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2.5, -2.5),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_e5vvm"]
_data = {
"hovering": SubResource("Animation_3ua6q"),
"locked": SubResource("Animation_lp4xp"),
"unlocking": SubResource("Animation_q1y2i")
}

[sub_resource type="Animation" id="Animation_y71s8"]
resource_name = "color_fill"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("LinkBackground/backline3:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2.5, -2.5),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_wcvmu"]
_data = {
"color_fill": SubResource("Animation_y71s8")
}

[node name="SkillButton" type="TextureButton"]
show_behind_parent = true
custom_minimum_size = Vector2(64, 64)
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(32, 32)
toggle_mode = true
ignore_texture_size = true
stretch_mode = 0
script = ExtResource("2_svy3l")

[node name="LinkOutlines" type="Control" parent="."]
layout_mode = 1
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="outline1" type="Line2D" parent="LinkOutlines"]
position = Vector2(32, 32)
points = PackedVector2Array(-1, 0)
default_color = Color(0.117647, 0.117647, 0.239216, 1)

[node name="outline2" type="Line2D" parent="LinkOutlines"]
position = Vector2(32, 32)
points = PackedVector2Array(-1, 0)
default_color = Color(0.117647, 0.117647, 0.239216, 1)

[node name="Outline" type="TextureRect" parent="."]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(32, 32)
texture = ExtResource("2_hltg7")
expand_mode = 1

[node name="LinkBackground" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="backline1" type="Line2D" parent="LinkBackground"]
show_behind_parent = true
position = Vector2(32, 32)
points = PackedVector2Array(-1, 0)
width = 6.0
default_color = Color(0.239216, 0.239216, 0.478431, 1)

[node name="backline2" type="Line2D" parent="LinkBackground"]
show_behind_parent = true
position = Vector2(32, 32)
points = PackedVector2Array(-1, 0)
width = 6.0
default_color = Color(0.239216, 0.239216, 0.478431, 1)

[node name="backline3" type="Line2D" parent="LinkBackground"]
modulate = Color(1, 1, 1, 0)
show_behind_parent = true
position = Vector2(32, 32)
points = PackedVector2Array(-1, 0)
width = 6.0
gradient = SubResource("Gradient_fbh1k")

[node name="ColorLinks" type="Control" parent="."]
show_behind_parent = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="LineColor1" type="Line2D" parent="ColorLinks"]
show_behind_parent = true
z_index = 1
position = Vector2(32, 32)
points = PackedVector2Array(-1, 0)
width = 6.0
default_color = Color(0.239216, 0.239216, 0.478431, 1)

[node name="Background" type="TextureRect" parent="."]
z_index = 2
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(32, 32)
texture = ExtResource("2_s64fj")
expand_mode = 1

[node name="SkillIcon" type="TextureRect" parent="Background"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
pivot_offset = Vector2(32, 32)
expand_mode = 1

[node name="Lock" type="TextureRect" parent="."]
z_index = 2
custom_minimum_size = Vector2(64, 64)
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
scale = Vector2(1.1, 1.1)
pivot_offset = Vector2(32, 32)
expand_mode = 1

[node name="Control" type="Control" parent="."]
z_index = 1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
rotation = 3.14159
scale = Vector2(0.85, 0.85)
pivot_offset = Vector2(32, 32)
mouse_filter = 2

[node name="TextureProgressBar" type="TextureProgressBar" parent="Control"]
layout_mode = 0
offset_left = -32.0
offset_top = -32.0
offset_right = 96.0
offset_bottom = 96.0
mouse_filter = 2
max_value = 1.0
step = 0.0
fill_mode = 8
texture_progress = ExtResource("4_xiwpi")

[node name="HoveringAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e5vvm")
}

[node name="UnlockingAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_e5vvm")
}

[node name="ColorFillingAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_wcvmu")
}

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true

[connection signal="focus_entered" from="." to="." method="_on_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_focus_exited"]
[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
